Fix non-left-aligned checkboxes in forms
This appears in Chrome on Windows, and Firefox on the Mac, possibly
elsewhere too. The "width" styling on form inputs actually forces the
checkbox to appear centered on some browsers, but its actually just that
it tries to be wide, and the checkbox ends up sitting on the right
within the box that defines the super-wide checkbox.

The solution is to apply "width" styling only to specific elements
(inputs of type 'text' and 'password', and textarea elements).

See:

  https://wincent.com/issues/1672

--- a/app/views/sass/display.sass
+++ b/app/views/sass/display.sass
@@ -437,27 +437,24 @@ tr.even
 
 // forms
 
-input.field_with_errors, textarea.field_with_errors
-  border:           4px solid #f9b8be
-
-label
-  display:          inline-block
-  text-align:       right
-  color:            black
-  font-weight:      bold
-  vertical-align:   top
-  padding-right:    1em
-  width:            20%
-
-li input, li textarea
-  width:            70%
-
 form
+  input.field_with_errors, textarea.field_with_errors
+    border:           4px solid #f9b8be
   li
     display:          block
     list-style:       none
     padding-top:      5px
     padding-bottom:   5px
+    input[type=password], input[type=text], textarea
+      width:          70%
+    label
+      display:          inline-block
+      text-align:       right
+      color:            black
+      font-weight:      bold
+      vertical-align:   top
+      padding-right:    1em
+      width:            20%
   li + li
     border-top:       1px solid #eeeeee
 
